home-page-ui added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^1.0.0
+  flutter_switch: ^0.3.2
   flutter_test:
     sdk: flutter
   get: ^4.6.1
