--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dev_dependencies:
     sdk: flutter
   get: ^4.6.1
   syncfusion_flutter_charts: ^19.4.55
+  url_launcher: ^6.0.20
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
