--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  dio: ^4.0.6
   flutter_lints: ^1.0.0
   flutter_switch: ^0.3.2
   flutter_test:
